Bug 412035 - Plasma-discover stalls forever at checking for updates or fetching updates
Summary: Plasma-discover stalls forever at checking for updates or fetching updates
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.15.4
Platform: Kubuntu Linux
: NOR critical
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-18 18:31 UTC by Katie Nelson
Modified: 2019-10-07 15:47 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.17.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Katie Nelson 2019-09-18 18:31:33 UTC
SUMMARY
Discover stalls forever at checking for updates.

-----
Operating System: Kubuntu 19.04
KDE Plasma Version: 5.15.4
KDE Frameworks Version: 5.56.0
Qt Version: 5.12.2
Kernel Version: 5.0.0-29-generic
OS Type: 64-bit
Processors: 4 × Intel® Core™ i3-8130U CPU @ 2.20GHz
Memory: 7.5 GiB of RAM
-------
at konsole: plasma-discover:
katie@Node-1:~$ plasma-discover
invalid kns backend! "/etc/xdg/ksysguard.knsrc" because: "Config group not found! Check your KNS3 installation."
invalid kns backend! "/etc/xdg/servicemenu.knsrc" because: "Config group not found! Check your KNS3 installation."
adding empty sources model QStandardItemModel(0x5603518c4620)
no packages for "org.kde.plasma.kimpanel"
no packages for "audoban.applet.separator"
no packages for "gspectrum.desktop"
no packages for "libgphoto2"
no packages for "org.kde.plasma.systemloadviewer"
no packages for "org.gnome.rhythmbox.alternative-toolbar.addon"
no packages for "org.kde.plasma.showActivityManager"
no packages for "org.xfce.Thunar"
no packages for "libu2f-udev"
no packages for "org.kde.plasma.quicklaunch"
no packages for "org.kde.kscreen"
no packages for "cockpit.desktop"
no packages for "org.kde.plasma.timer"
no packages for "org.cockpit_project.cockpit"
no packages for "org.kde.plasma.grouping"
no packages for "gchem3d.desktop"
no packages for "im.riot.webapp"
no packages for "org.kde.plasma.appmenu"
no packages for "org.kde.plasma.diskquota"
no packages for "gchemcalc.desktop"
no packages for "gchemtable.desktop"
org.kde.plasma.discover: couldn't parse "/home/katie/.cache/discover/featured-5.9.json" . error: "illegal value"
org.kde.plasma.discover: couldn't parse "/home/katie/.cache/discover/featured-5.9.json" . error: "illegal value"
org.kde.plasma.discover: couldn't parse "/home/katie/.cache/discover/featured-5.9.json" . error: "illegal value"
could not find "inkscape.desktop" ""
could not find "org.kde.development" ""
"Could not convert argument 0 at"
         "expression for iconName@qrc:/qml/KirigamiActionBridge.qml:35"
"Passing incompatible arguments to C++ functions from JavaScript is dangerous and deprecated."
"This will throw a JavaScript TypeError in future releases of Qt!"
qrc:/qml/KirigamiActionBridge.qml:34:5: Unable to assign [undefined] to QString
"Could not convert argument 0 at"
         "expression for iconName@qrc:/qml/KirigamiActionBridge.qml:35"
"Passing incompatible arguments to C++ functions from JavaScript is dangerous and deprecated."
"This will throw a JavaScript TypeError in future releases of Qt!"
qrc:/qml/KirigamiActionBridge.qml:34:5: Unable to assign [undefined] to QString
"Could not convert argument 0 at"
         "expression for iconName@qrc:/qml/KirigamiActionBridge.qml:35"
"Passing incompatible arguments to C++ functions from JavaScript is dangerous and deprecated."
"This will throw a JavaScript TypeError in future releases of Qt!"
qrc:/qml/KirigamiActionBridge.qml:34:5: Unable to assign [undefined] to QString
"Could not convert argument 0 at"
         "expression for iconName@qrc:/qml/KirigamiActionBridge.qml:35"
"Passing incompatible arguments to C++ functions from JavaScript is dangerous and deprecated."
"This will throw a JavaScript TypeError in future releases of Qt!"
qrc:/qml/KirigamiActionBridge.qml:34:5: Unable to assign [undefined] to QString
"Could not convert argument 0 at"
         "expression for iconName@qrc:/qml/KirigamiActionBridge.qml:35"
"Passing incompatible arguments to C++ functions from JavaScript is dangerous and deprecated."
"This will throw a JavaScript TypeError in future releases of Qt!"
qrc:/qml/KirigamiActionBridge.qml:34:5: Unable to assign [undefined] to QString
"Could not convert argument 0 at"
         "expression for iconName@qrc:/qml/KirigamiActionBridge.qml:35"
"Passing incompatible arguments to C++ functions from JavaScript is dangerous and deprecated."
"This will throw a JavaScript TypeError in future releases of Qt!"
qrc:/qml/KirigamiActionBridge.qml:34:5: Unable to assign [undefined] to QString
"Could not convert argument 0 at"
         "expression for iconName@qrc:/qml/KirigamiActionBridge.qml:35"
"Passing incompatible arguments to C++ functions from JavaScript is dangerous and deprecated."
"This will throw a JavaScript TypeError in future releases of Qt!"
"Could not convert argument 0 at"
         "expression for iconName@qrc:/qml/KirigamiActionBridge.qml:35"
"Passing incompatible arguments to C++ functions from JavaScript is dangerous and deprecated."
"This will throw a JavaScript TypeError in future releases of Qt!"
qrc:/qml/KirigamiActionBridge.qml:34:5: Unable to assign [undefined] to QString
qrc:/qml/KirigamiActionBridge.qml:34:5: Unable to assign [undefined] to QString
org.kde.knewstuff.core: Could not find category "Parley"
file:///usr/lib/x86_64-linux-gnu/qt5/qml/org/kde/kirigami.2/Page.qml:282: TypeError: Cannot read property 'globalToolBar' of null
Comment 1 Dirk Tombaugh 2019-09-18 20:10:17 UTC
Operating System: openSUSE Leap 15.0
KDE Plasma Version: 5.16.5
KDE Frameworks Version: 5.62.0
Qt Version: 5.13.1
Kernel Version: 4.12.14-lp150.12.70-default
OS Type: 64-bit
Processors: 8 × AMD FX(tm)-8350 Eight-Core Processor
Memory: 15.6 GiB of RAM
------
I have the same problem, but a slightly different result from CLI launch:

invalid kns backend! "/etc/xdg/servicemenu.knsrc" because: "Config group not found! Check your KNS3 installation."
adding empty sources model QStandardItemModel(0x556208c06c20)
Could not open the AppStream metadata pool "Some components have been ignored: Metadata files have errors: /var/cache/app-info/xmls/repo-oss.xml.gz, /var/cache/app-info/xmls/repo-non-oss.xml.gz"
no packages for "org.kde.okular-md"
no packages for "org.kde.okular-ooo"
no packages for "org.kde.plasma.quicklaunch"
no packages for "org.kde.plasma.weather"
no packages for "org.kde.plasma.systemmonitor.memory"
no packages for "org.kde.latte.shell"
no packages for "org.kde.desktopcontainment"
no packages for "org.kde.plasma.networkmanagement"
no packages for "org.kde.plasma.systemloadviewer"
no packages for "org.kde.plasma.webbrowser"
no packages for "org.kde.plasma.clipboard"
no packages for "org.kde.okular-tiff"
no packages for "org.kde.plasma.pager"
no packages for "org.kde.okular-plucker"
no packages for "org.kde.okular.kirigami.desktop"
no packages for "org.kde.plasma.showActivityManager"
no packages for "org.kde.plasma.notes"
no packages for "org.kde.okular-dvi"
no packages for "org.kde.plasma.worldmap"
no packages for "org.kde.okular-comicbook"
no packages for "org.kde.plasma.trash"
no packages for "org.kde.plasma.comic"
no packages for "org.kde.plasma.windowlist"
no packages for "org.kde.plasma.battery"
no packages for "org.kde.hunyango"
no packages for "org.kde.haenau"
no packages for "org.kde.okular-poppler"
no packages for "org.kde.plasma.lock_logout"
no packages for "org.kde.plasma.keyboardindicator"
no packages for "org.kde.paneltoolbox"
no packages for "org.kde.plasma.printmanager"
no packages for "org.kde.okular-xps"
no packages for "org.kde.plasma.grouping"
no packages for "org.kde.plasma.analogclock"
no packages for "org.kde.plasma.folder"
no packages for "org.kde.color"
no packages for "org.kde.konqueror.desktop"
no packages for "org.kde.image"
no packages for "org.kde.plasma.worldclock"
no packages for "org.kde.okular-epub"
no packages for "org.kde.okular-fax"
no packages for "org.kde.plasma.bluetooth"
no packages for "org.kde.plasma.systemmonitor.diskusage"
no packages for "org.kde.plasma.wacomtablet"
no packages for "org.kde.plasma.showdesktop"
no packages for "org.kde.okular-mobipocket"
no packages for "org.kde.plasma.diskquota"
no packages for "org.kde.amarok.desktop"
no packages for "org.kde.plasma.systemtray"
no packages for "org.kde.plasma.calendar"
no packages for "org.kde.kdialog"
no packages for "org.kde.plasma.systemmonitor.diskactivity"
no packages for "org.freedesktop.appstream.cli"
no packages for "org.kde.breezedark.desktop"
no packages for "org.kde.plasma.userswitcher"
no packages for "org.kde.plasma.systemmonitor.net"
no packages for "org.kde.plasma.desktop.emptyPanel"
no packages for "org.kde.desktoptoolbox"
no packages for "org.kde.latte.containment"
no packages for "org.kde.okular-kimgio"
no packages for "org.kde.plasma.fuzzyclock"
no packages for "org.kde.plasma.kicker"
no packages for "org.kde.plasma_applet_dict"
no packages for "org.kde.plasma.activitypager"
no packages for "org.kde.kio_audiocd"
no packages for "org.kde.plasma.colorpicker"
no packages for "org.kde.plasma.pkupdates"
no packages for "org.kde.plasmashell"
no packages for "org.kde.plasma.fifteenpuzzle"
no packages for "org.kde.plasma.timer"
no packages for "org.kde.kscreen"
no packages for "org.kde.latte.plasmoid"
no packages for "org.kde.milou"
no packages for "org.kde.plasma.mediacontroller"
no packages for "org.kde.plasma.konsoleprofiles"
no packages for "org.kde.discover.packagekit"
no packages for "org.kde.breeze.desktop"
no packages for "org.kde.plasma.quickshare"
no packages for "org.kde.plasma.mediaframe"
no packages for "org.kde.plasma.systemmonitor.cpu"
no packages for "org.kde.plasma.katesessions"
no packages for "org.kde.plasma.activitybar"
no packages for "org.kde.potd"
no packages for "org.kde.slideshow"
no packages for "org.kde.plasma.icontasks"
no packages for "org.kde.okular-fb"
no packages for "org.kde.kinfocenter"
no packages for "org.kde.plasma.taskmanager"
no packages for "owncloud_kaccounts_ui"
no packages for "org.kde.okular-chm"
no packages for "org.kde.plasma.digitalclock"
no packages for "org.kde.plasma.desktop.appmenubar"
no packages for "org.kde.okular-txt"
no packages for "org.kde.plasma.volume"
no packages for "org.freedesktop.fwupd"
no packages for "org.kde.plasma.desktop.defaultPanel"
no packages for "org.kde.plasma.kickerdash"
no packages for "org.kde.plasma.calculator"
no packages for "org.kde.plasma.appmenu"
no packages for "org.kde.discover.flatpak"
no packages for "org.kde.plasma.notifications"
no packages for "org.kde.plasma.devicenotifier"
no packages for "org.kde.plasma.binaryclock"
no packages for "org.kde.plasma.desktop"
no packages for "org.kde.plasma.kimpanel"
no packages for "org.kde.okular-djvu"
no packages for "org.kde.wacomtablet"
no packages for "org.kde.plasma.kickoff"
no packages for "org.kde.plasma.minimizeall"
empty appstream db
could not find "org.kde.krita.desktop" "krita.desktop"
could not find "org.kde.digikam.desktop" "digikam.desktop"
could not find "org.kde.kdenlive.desktop" ""
could not find "org.kde.ktorrent.desktop" "ktorrent.desktop"
could not find "org.kde.gcompris.desktop" "gcompris.desktop"
could not find "org.kde.kmymoney.desktop" "kmymoney.desktop"
could not find "org.kde.kolourpaint.desktop" "kolourpaint.desktop"
could not find "blender.desktop" ""
could not find "inkscape.desktop" ""
could not find "org.kde.development" ""
could not find "org.kde.krita.desktop" "krita.desktop"
could not find "org.kde.digikam.desktop" "digikam.desktop"
could not find "org.kde.kdenlive.desktop" ""
could not find "org.kde.ktorrent.desktop" "ktorrent.desktop"
could not find "org.kde.gcompris.desktop" "gcompris.desktop"
could not find "org.kde.kmymoney.desktop" "kmymoney.desktop"
could not find "org.kde.kolourpaint.desktop" "kolourpaint.desktop"
could not find "blender.desktop" ""
could not find "inkscape.desktop" ""
could not find "org.kde.development" ""
qml: message: Please make sure that Appstream is properly set up on your system
could not find "org.kde.krita.desktop" "krita.desktop"
could not find "org.kde.digikam.desktop" "digikam.desktop"
could not find "org.kde.kdenlive.desktop" ""
could not find "org.kde.ktorrent.desktop" "ktorrent.desktop"
could not find "org.kde.gcompris.desktop" "gcompris.desktop"
could not find "org.kde.kmymoney.desktop" "kmymoney.desktop"
could not find "org.kde.kolourpaint.desktop" "kolourpaint.desktop"
could not find "blender.desktop" ""
could not find "inkscape.desktop" ""
could not find "org.kde.development" ""
Couldn't get latest commit for org.freedesktop.Platform.Locale
Couldn't get latest commit for org.freedesktop.Platform.ffmpeg
Couldn't get latest commit for org.freedesktop.Platform
Comment 2 Aleix Pol 2019-10-07 15:39:33 UTC
Git commit c550098aeaad51b504252434f8b51d5e5e9a9140 by Aleix Pol.
Committed on 07/10/2019 at 15:31.
Pushed by apol into branch 'Plasma/5.17'.

packagekit: Improve update UI population

Make sure we get a progress bar until all updates have been loaded.
Reduces flickering on PackageKit progressing property by loading
everything as sequentially as possible.

M  +3    -2    discover/qml/UpdatesPage.qml
M  +4    -4    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp

https://commits.kde.org/discover/c550098aeaad51b504252434f8b51d5e5e9a9140