packagekit: Improve update UI population

Make sure we get a progress bar until all updates have been loaded.
Reduces flickering on PackageKit progressing property by loading
everything as sequentially as possible.

BUG: 412035